--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -8,10 +8,10 @@
     <title>执法监督平台——用户名</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
-    <script src="../../pkui/lib/sea-modules/seajs/3.0.0.x/sea.js"></script>
-    <script src="../../pkui/lib/sea-modules/seajs-config.js"></script>
+    <script src="../../src/lib/sea-modules/seajs/3.0.0.x/sea.js"></script>
+    <script src="../../src/lib/sea-modules/seajs-config.js"></script>
     <script>
-        seajs.config( { base: '../../pkui'  } );
+        seajs.config( { base: '../../src'  } );
         seajs.use("./js/main");
     </script>
 </head>
