完成app启动基本雏形

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -29,16 +29,7 @@
 
         <!-- 任务栏 -->
         <div class="topbar-dock">
-            <div class="topbar-dock-item active" style="width: 136px;"><!--
-                --><img class="dock-item-icon" src="./images/apps/app_01.png" alt=""><!--
-                --><span class="dock-item-title" title="执法监督综合应用门户">执法监督综合应用门户</span><!--
-                --><i class="dock-item-btn"></i>
-            </div>
-            <div class="topbar-dock-item" style="width: 136px;"><!--
-                --><img class="dock-item-icon" src="./images/apps/app_02.png" alt=""><!--
-                --><span class="dock-item-title" title="执法监督综合应用门户">执法问题动态跟踪子系统</span><!--
-                --><span class="dock-item-btn"></span>
-            </div>
+
         </div>
         <!-- /任务栏 -->
 
@@ -101,7 +92,12 @@
                 <div class="launchpad-view-pageList swiper-wrapper">
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
+                            <div class="launchpad-shortcut"
+                                 data-pkui-app="true"
+                                 data-pkui-app-options='{ "icon": "./images/apps/app_01.png", "title": "执法监督综合应用门户" }'>
+                                <img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt="">
+                                <p class="launchpad-shortcut-title">执法监督综合应用门户</p>
+                            </div>
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_03.png" alt=""><p class="launchpad-shortcut-title">如实受立案监督子系统</p></div>
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_04.png" alt=""><p class="launchpad-shortcut-title">执法时限预警子系统</p></div>
