--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -29,7 +29,13 @@
 
         <!-- 任务栏 -->
         <div class="topbar-dock">
-
+            <!--
+            <div class="topbar-dock-item" >
+                <img class="dock-item-icon" src="{{ icon }}" alt="">
+                <span class="dock-item-title" title="{{ title }}">{{ title }}</span>
+                <i class="dock-item-btn"></i>
+            </div>
+            -->
         </div>
         <!-- /任务栏 -->
 
