--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -98,27 +98,22 @@
                 <div class="launchpad-view-pageList swiper-wrapper">
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
-                            <div class="launchpad-shortcut"
-                                 data-pkui-app="true"
-                                 data-pkui-app-options='{ "icon": "./images/apps/app_01.png", "title": "执法监督综合应用门户" }'>
-                                <img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt="">
-                                <p class="launchpad-shortcut-title">执法监督综合应用门户</p>
-                            </div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_03.png" alt=""><p class="launchpad-shortcut-title">如实受立案监督子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_04.png" alt=""><p class="launchpad-shortcut-title">执法时限预警子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_05.png" alt=""><p class="launchpad-shortcut-title">电子屏动态监督子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_06.png" alt=""><p class="launchpad-shortcut-title">问题模型管理子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_07.png" alt=""><p class="launchpad-shortcut-title">网上巡查监督子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_08.png" alt=""><p class="launchpad-shortcut-title">办案场所监督子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_09.png" alt=""><p class="launchpad-shortcut-title">执法质量考评子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_10.png" alt=""><p class="launchpad-shortcut-title">监督救济业务子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_11.png" alt=""><p class="launchpad-shortcut-title">执法监督台帐子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_12.png" alt=""><p class="launchpad-shortcut-title">执法规范化建设管理子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_13.png" alt=""><p class="launchpad-shortcut-title">执法教育培训子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_14.png" alt=""><p class="launchpad-shortcut-title">分局执法监督平台子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_15.png" alt=""><p class="launchpad-shortcut-title">综合统计分析子系统</p></div>
-                            <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_16.png" alt=""><p class="launchpad-shortcut-title">运行管理维护子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_01.png", "title": "执法监督综合应用门户" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_02.png", "title": "执法问题动态跟踪子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_03.png", "title": "如实受立案监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_03.png" alt=""><p class="launchpad-shortcut-title">如实受立案监督子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_04.png", "title": "执法时限预警子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_04.png" alt=""><p class="launchpad-shortcut-title">执法时限预警子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_05.png", "title": "电子屏动态监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_05.png" alt=""><p class="launchpad-shortcut-title">电子屏动态监督子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_06.png", "title": "问题模型管理子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_06.png" alt=""><p class="launchpad-shortcut-title">问题模型管理子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_07.png", "title": "网上巡查监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_07.png" alt=""><p class="launchpad-shortcut-title">网上巡查监督子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_08.png", "title": "办案场所监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_08.png" alt=""><p class="launchpad-shortcut-title">办案场所监督子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_09.png", "title": "执法质量考评子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_09.png" alt=""><p class="launchpad-shortcut-title">执法质量考评子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_10.png", "title": "监督救济业务子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_10.png" alt=""><p class="launchpad-shortcut-title">监督救济业务子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_11.png", "title": "执法监督台帐子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_11.png" alt=""><p class="launchpad-shortcut-title">执法监督台帐子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_12.png", "title": "执法规范化建设管理子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_12.png" alt=""><p class="launchpad-shortcut-title">执法规范化建设管理子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_13.png", "title": "执法教育培训子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_13.png" alt=""><p class="launchpad-shortcut-title">执法教育培训子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_14.png", "title": "分局执法监督平台子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_14.png" alt=""><p class="launchpad-shortcut-title">分局执法监督平台子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_15.png", "title": "综合统计分析子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_15.png" alt=""><p class="launchpad-shortcut-title">综合统计分析子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_16.png", "title": "运行管理维护子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_16.png" alt=""><p class="launchpad-shortcut-title">运行管理维护子系统</p></div>
                         </div>
                     </div>
                     <div class="launchpad-view-pageItem swiper-slide">
