【desktop】 修复swiper初始化完毕前，导致的多页上下排列的问题

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -95,7 +95,7 @@
 
             <!-- 显示区域 -->
             <div class="launchpad-view swiper-container">
-                <div class="launchpad-view-pageList swiper-wrapper">
+                <div class="launchpad-view-pageList swiper-wrapper hidden">
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_01.png", "title": "执法监督综合应用门户" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
