【desktop】1. 修复拖拽排序过程进行翻页的阈值处理；2. 扩展swiper参数，loopWithoutDuplicate

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -119,12 +119,14 @@
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
+                            <div class="launchpad-LastShortcut-placeholder"><!-- 作为占位符使用，避免当页面只有一个快捷方式时，无法拖拽到别的页面去 --></div>
                         </div>
                     </div>
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
                             <div class="launchpad-shortcut"><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
+                            <div class="launchpad-LastShortcut-placeholder"><!-- 作为占位符使用，避免当页面只有一个快捷方式时，无法拖拽到别的页面去 --></div>
                         </div>
                     </div>
                 </div>
