【PKUI】设置时间戳，避免缓存。

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -8,8 +8,11 @@
     <title>执法监督平台——用户名</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
-    <!-- data-main：当前应用的入口js文件 -->
-    <script data-main="./js/main.js" src="../../src/lib/pkui.js"></script>
+    <!--
+        data-main：当前应用的入口js文件
+        data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
+     -->
+    <script data-main="./js/main.js" data-timestamp="dev" src="../../src/lib/pkui.js"></script>
 </head>
 <body>
 
