--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -12,7 +12,7 @@
         data-main：当前应用的入口js文件
         data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
      -->
-    <script data-main="./js/main.js" data-timestamp="dev" src="../../src/lib/pkui.js"></script>
+    <script data-main="./js/main.js" data-timestamp="dev" src="../../src/pkui.js"></script>
 </head>
 <body>
 
@@ -101,7 +101,13 @@
                 <div class="launchpad-view-pageList swiper-wrapper hidden">
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-shortcutpad">
-                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_01.png", "title": "执法监督综合应用门户" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt=""><p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true"
+                                 data-pkui-app-options='{
+                                     "icon": "./images/apps/app_01.png",
+                                     "title": "执法监督综合应用门户",
+                                     "src": "./tpl/system/manage.html" }'>
+                                <img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt="">
+                                <p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_02.png", "title": "执法问题动态跟踪子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_03.png", "title": "如实受立案监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_03.png" alt=""><p class="launchpad-shortcut-title">如实受立案监督子系统</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_04.png", "title": "执法时限预警子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_04.png" alt=""><p class="launchpad-shortcut-title">执法时限预警子系统</p></div>
