【desktop】基本完成dock页签的增删，但隐藏的页签还有问题。

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -12,7 +12,7 @@
         data-main：当前应用的入口js文件
         data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
      -->
-    <script data-main="./js/main.js" data-timestamp="dev" src="../../src/pkui.js"></script>
+    <script data-main="./js/main.js" data-timestamp="1" src="../../src/pkui.js"></script>
 </head>
 <body>
 
@@ -39,6 +39,11 @@
                 <i class="dock-item-btn"></i>
             </div>
             -->
+            <i class="dock-dropmenu-indicator" style="display: none;"></i>
+            <div class="dock-dropmenu" >
+                <div class="dock-dropmenu-list hidden">
+                </div>
+            </div>
         </div>
         <!-- /任务栏 -->
 
