【desktop】在index.html中给各个元素添加 title

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -23,11 +23,11 @@
     <div class="da-topbar">
 
         <!-- 显示桌面 -->
-        <div class="topbar-home"></div>
+        <div class="topbar-home" title="隐藏所有窗口"></div>
         <!-- /显示桌面 -->
 
         <!-- 已使用过的功能 -->
-        <div class="topbar-history"></div>
+        <div class="topbar-history" title="已使用过的应用"></div>
         <!-- /已使用过的功能 -->
 
         <!-- 任务栏 -->
