--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -20,7 +20,7 @@
 <div class="da da-theme da-theme-default">
 
     <!-- 顶部栏 -->
-    <div class="da-topbar">
+    <header class="da-topbar">
 
         <!-- 显示桌面 -->
         <div class="topbar-home" title="隐藏所有窗口"></div>
@@ -93,11 +93,11 @@
         </div>
         <!-- /工具栏 -->
 
-    </div>
+    </header>
     <!-- /顶部栏 -->
 
     <!-- 桌面 -->
-    <div class="da-desktop">
+    <main class="da-desktop">
         <!-- 应用启动面板 -->
         <div class="launchpad-container">
 
@@ -165,8 +165,14 @@
 
         </div>
         <!-- /应用启动面板 -->
-    </div>
+    </main>
     <!-- /桌面 -->
+
+    <!-- 则边栏 -->
+    <aside>
+
+    </aside>
+    <!-- /则边栏 -->
 
 </div>
 <!-- /desktop app -->
