--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -110,7 +110,7 @@
                                  data-pkui-app-options='{
                                      "icon": "./images/apps/app_01.png",
                                      "title": "执法监督综合应用门户",
-                                     "src": "./tpl/system/manage.html" }'>
+                                     "src": "./tpl/system/dept/list.html" }'>
                                 <img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt="">
                                 <p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_02.png", "title": "执法问题动态跟踪子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
