--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -1,42 +1,102 @@
 <div class="da-win">
     <!-- 页眉 -->
-    <header class="win-header">
-        <i class="win-aside-drawerToggler"></i>
+    <header class="da-win-header">
+        <button class="win-aside-drawerToggler" type="button" title="展开/折叠侧边栏">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         <p class="win-header-breadcrumbs breadcrumb">
-            <b>当前位置：</b>
-            <span>执法监督平台</span>
-            <i class="divider">&gt;</i>
-            <span>执法监督综合应用门户</span>
-            <i class="divider">&gt;</i>
+            <b>当前位置：</b><span>执法监督平台</span><!--
+            --><i class="divider">/</i><!--
+            --><span>执法监督综合应用门户</span><!--
+            --><!--<i class="divider">/</i>
+            <a href="#">系统设置</a>--><!--
+            --><i class="divider">/</i>
             <span class="active">系统设置</span>
-            <i class="divider">&gt;</i>
-            <span class="active">单位管理</span>
         </p>
     </header>
     <!-- /页眉 -->
 
-    <!-- 侧边栏 -->
-    <aside class="win-sidebar">
-        <div class="sidebar-wrap">
-            <ul class="sidebar-menu sidebar-topmenu">
-                <li class="sidebar-menu-item">
-                    <a href="#">系统设置</a>
-                    <ul class="sidebar-menu">
-                        <li class="sidebar-menu-item"><a href="#">单位管理</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="sidebar-menu sidebar-submenu">
-
-            </ul>
-        </div>
-    </aside>
-    <!-- /侧边栏 -->
-
     <!-- 主体 -->
-    <main class="win-main">
+    <main class="da-win-main">
+
+        <header class="win-main-heading">
+            <img src="./images/default/small/gear2.png" alt="" class="main-heading-icon"><span
+                class="main-heading-text">单位管理</span>
+        </header>
+        <main class="win-main-body">
+
+        </main>
 
     </main>
     <!-- /主体 -->
+
+
+    <!-- 侧边栏 -->
+    <aside class="da-win-sidebar">
+        <ul class="sidebar-menu">
+            <li class="sidebar-menuItem">
+                <a href="javascript:void(0);" class="sidebar-menuItem-anchor sidebar-submenu-toggle">
+                    <img src="./images/default/small/gear.png" alt="" class="sidebar-menuItem-icon"><span
+                        class="sidebar-menuItem-text">系统设置</span>
+                </a>
+                <ul class="sidebar-submenu">
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/gear2.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">单位管理</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/dic.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">用户管理</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/book.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">角色管理</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/browser.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">系统参数</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/shield.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">字典管理</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/ring.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">资源管理</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menuItem">
+                        <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
+                            <img src="./images/default/small/user.png" alt="" class="sidebar-menuItem-icon"><span
+                                class="sidebar-menuItem-text">权限设置（单位管理单位管理单位管理单位管理）</span>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="sidebar-menuItem">
+                <a href="#" class="sidebar-menuItem-anchor">
+                    <img src="./images/default/small/app.png" alt="" class="sidebar-menuItem-icon"><span
+                        class="sidebar-menuItem-text">应用服务</span>
+                </a>
+            </li>
+
+        </ul>
+
+    </aside>
+    <!-- /侧边栏 -->
+
 
 </div>
