--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -42,7 +42,7 @@
                         class="sidebar-menuItem-text">系统设置</span>
                 </a>
                 <ul class="sidebar-submenu">
-                    <li class="sidebar-menuItem">
+                    <li class="sidebar-menuItem active">
                         <a href="javascript:void(0);" class="sidebar-menuItem-anchor">
                             <img src="./images/default/small/gear2.png" alt="" class="sidebar-menuItem-icon"><span
                                 class="sidebar-menuItem-text">单位管理</span>
