【desktop】修复在IE8上使用HTML5语义标签造成的问题
不使用HTML5语义标签

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -20,7 +20,7 @@
 <div class="da da-theme da-theme-default">
 
     <!-- 顶部栏 -->
-    <header class="da-topbar">
+    <div class="da-topbar">
 
         <!-- 显示桌面 -->
         <div class="topbar-home" title="隐藏所有窗口"></div>
@@ -93,11 +93,11 @@
         </div>
         <!-- /工具栏 -->
 
-    </header>
+    </div>
     <!-- /顶部栏 -->
 
     <!-- 桌面 -->
-    <main class="da-desktop">
+    <div class="da-desktop">
         <!-- 应用启动面板 -->
         <div class="launchpad-container">
 
@@ -165,13 +165,13 @@
 
         </div>
         <!-- /应用启动面板 -->
-    </main>
+    </div>
     <!-- /桌面 -->
 
     <!-- 则边栏 -->
-    <aside>
+    <div>
 
-    </aside>
+    </div>
     <!-- /则边栏 -->
 
 </div>
