--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -1,6 +1,6 @@
 <div class="da-win">
     <!-- 页眉 -->
-    <header class="da-win-header">
+    <div class="da-win-header">
         <button class="sidebar-collapse-toggle" type="button" title="展开/折叠侧边栏"></button>
         <p class="win-header-breadcrumbs breadcrumb">
             <b>当前位置：</b><span>执法监督平台</span><!--
@@ -11,26 +11,26 @@
             --><i class="divider">/</i>
             <span class="active">系统设置</span>
         </p>
-    </header>
+    </div>
     <!-- /页眉 -->
 
     <!-- 主体 -->
-    <main class="da-win-main">
+    <div class="da-win-main">
 
-        <header class="win-main-heading">
+        <div class="win-main-heading">
             <img src="./images/default/small/gear2.png" alt="" class="main-heading-icon"><span
                 class="main-heading-text">单位管理</span>
-        </header>
-        <main class="win-main-body">
+        </div>
+        <div class="win-main-body">
 
-        </main>
+        </div>
 
-    </main>
+    </div>
     <!-- /主体 -->
 
 
     <!-- 侧边栏 -->
-    <aside class="da-win-sidebar">
+    <div class="da-win-sidebar">
         <ul class="sidebar-menu">
             <li class="sidebar-menuItem">
                 <a href="javascript:void(0);" class="sidebar-menuItem-anchor sidebar-submenu-toggle">
@@ -91,7 +91,7 @@
 
         </ul>
 
-    </aside>
+    </div>
     <!-- /侧边栏 -->
 
     <script>
