【PKUI】修复引入html5shiv后无法在IE8中使用HTML5语义化标签的问题
将 html5shiv 放在 document.write(“<script src=…>”)中引入，同步载入并执行。

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -1,6 +1,6 @@
 <div class="da-win">
     <!-- 页眉 -->
-    <div class="da-win-header">
+    <header class="da-win-header">
         <button class="sidebar-collapse-toggle" type="button" title="展开/折叠侧边栏"></button>
         <p class="win-header-breadcrumbs breadcrumb">
             <b>当前位置：</b><span>执法监督平台</span><!--
@@ -11,11 +11,11 @@
             --><i class="divider">/</i>
             <span class="active">系统设置</span>
         </p>
-    </div>
+    </header>
     <!-- /页眉 -->
 
     <!-- 主体 -->
-    <div class="da-win-main">
+    <main class="da-win-main">
 
         <div class="win-main-heading">
             <img src="./images/default/small/gear2.png" alt="" class="main-heading-icon"><span
@@ -25,12 +25,12 @@
 
         </div>
 
-    </div>
+    </main>
     <!-- /主体 -->
 
 
     <!-- 侧边栏 -->
-    <div class="da-win-sidebar">
+    <aside class="da-win-sidebar">
         <ul class="sidebar-menu">
             <li class="sidebar-menuItem">
                 <a href="javascript:void(0);" class="sidebar-menuItem-anchor sidebar-submenu-toggle">
@@ -91,7 +91,7 @@
 
         </ul>
 
-    </div>
+    </aside>
     <!-- /侧边栏 -->
 
     <script>
