--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -13,6 +13,7 @@
         data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
      -->
     <script data-main="./js/main.js" data-timestamp="2017-03-09" src="../../src/pkui.js"></script>
+    <!--<script src="../../src/lib/html5shiv/3.7.3/html5shiv.js"></script>-->
 </head>
 <body>
 
@@ -20,7 +21,7 @@
 <div class="da da-theme da-theme-default">
 
     <!-- 顶部栏 -->
-    <div class="da-topbar">
+    <header class="da-topbar">
 
         <!-- 显示桌面 -->
         <div class="topbar-home" title="隐藏所有窗口"></div>
@@ -93,11 +94,11 @@
         </div>
         <!-- /工具栏 -->
 
-    </div>
+    </header>
     <!-- /顶部栏 -->
 
     <!-- 桌面 -->
-    <div class="da-desktop">
+    <main class="da-desktop">
         <!-- 应用启动面板 -->
         <div class="launchpad-container">
 
@@ -165,13 +166,13 @@
 
         </div>
         <!-- /应用启动面板 -->
-    </div>
+    </main>
     <!-- /桌面 -->
 
     <!-- 则边栏 -->
-    <div>
+    <aside>
 
-    </div>
+    </aside>
     <!-- /则边栏 -->
 
 </div>
