--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -111,10 +111,16 @@
                                  data-pkui-app-options='{
                                      "icon": "./images/apps/app_01.png",
                                      "title": "执法监督综合应用门户",
-                                     "src": "./tpl/system/dept/list.html" }'>
+                                     "src": "./tpl/system/index.html",
+                                     "mode": "default"}'>
                                 <img class="launchpad-shortcut-icon" src="./images/apps/app_01.png" alt="">
                                 <p class="launchpad-shortcut-title">执法监督综合应用门户</p></div>
-                            <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_02.png", "title": "执法问题动态跟踪子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
+                            <div class="launchpad-shortcut" data-pkui-app="true"
+                                 data-pkui-app-options='{
+                                    "icon": "./images/apps/app_02.png",
+                                    "title": "执法问题动态跟踪子系统",
+                                    "src": "http://www.baidu.com",
+                                    "mode": "iframe"}'><img class="launchpad-shortcut-icon" src="./images/apps/app_02.png" alt=""><p class="launchpad-shortcut-title">执法问题动态跟踪子系统</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_03.png", "title": "如实受立案监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_03.png" alt=""><p class="launchpad-shortcut-title">如实受立案监督子系统</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_04.png", "title": "执法时限预警子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_04.png" alt=""><p class="launchpad-shortcut-title">执法时限预警子系统</p></div>
                             <div class="launchpad-shortcut" data-pkui-app="true" data-pkui-app-options='{ "icon": "./images/apps/app_05.png", "title": "电子屏动态监督子系统" }'><img class="launchpad-shortcut-icon" src="./images/apps/app_05.png" alt=""><p class="launchpad-shortcut-title">电子屏动态监督子系统</p></div>
