【desktop】使用 javaee_pkui提供的数据

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -18,11 +18,10 @@
 -->
 
 <table id="sysDeptDatagrid" data-pkui-component="datagrid"
-       data-url="http://www.20ui.cn/admin/sysDept/listData"
+       data-url="http://javaeepkui.duapp.com/admin/sysDeptListData"
        data-query-form-selector="#queryForm">
     <!--
-     data-url="http://localhost:8080/admin/sysDeptListData"
-     data-url="http://www.20ui.cn/admin/sysDeptListData"
+     data-url="http://localhost:8080/pkui/admin/sysDeptListData"
     -->
     <thead>
     <tr>
