--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -17,6 +17,8 @@
 </form>
 -->
 
+<button type="button" class="btn btn-info">添加</button>
+
 <table id="sysDeptDatagrid" data-pkui-component="datagrid"
        data-url="http://javaeepkui.duapp.com/admin/sysDeptListData"
        data-query-form-selector="#queryForm">
