--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -8,6 +8,7 @@
     <title>执法监督平台——用户名</title>
     <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../src/css/font/font-awesome/4.7.0/font-awesome.css">
     <!--
         data-main：当前应用的入口js文件
         data-timestamp: 时间戳（dev为开发模式），比如 data-timestamp="v=2017-02-27"
