【desktop】修改readme.md

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -20,7 +20,7 @@
 <button type="button" class="btn btn-info">添加</button>
 
 <table id="sysDeptDatagrid" data-pkui-component="datagrid"
-       data-url="http://javaeepkui.duapp.com/admin/sysDeptListData"
+       data-url="http://www.20ui.cn/admin/sysDeptListData"
        data-query-form-selector="#queryForm">
     <!--
      data-url="http://localhost:8080/pkui/admin/sysDeptListData"
