【desktop】完成按钮样式
预设值了五种情景模式（default、primary、info、success、danger）

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -17,7 +17,13 @@
 </form>
 -->
 
-<button type="button" class="btn btn-info">添加</button>
+<div class="win-btnGroup">
+    <button type="button" class="btn btn-success-2"><i class="fa fa-plus"></i> 添加</button>
+    <button type="button" class="btn btn-info-2"><i class="fa fa-pencil"></i> 修改</button>
+    <button type="button" class="btn btn-danger-2"><i class="fa fa-trash-o"></i> 删除</button>
+    <button type="button" class="btn btn-primary-2"><i class="fa fa-book"></i> 生成字典</button>
+    <button type="button" class="btn btn-default-2"><i class="fa fa-search"></i> 高级查询</button>
+</div>
 
 <table id="sysDeptDatagrid" data-pkui-component="datagrid"
        data-url="http://www.20ui.cn/admin/sysDeptListData"
