--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -45,7 +45,7 @@
         -->
         <th data-column-id="deptId" data-identifier="true" data-visible="true" data-sortable="false" data-width="15%">部门标识号</th>
         <th data-column-id="deptName" data-sortable="false" data-width="30%">部门名称</th>
-        <th data-column-id="deptLevel" data-sortable="true" data-dic="deptLevelFormatter" data-width="20%">部门级别</th>
+        <th data-column-id="deptLevel" data-sortable="true" data-dic="DIC_DEPT_LEVEL" data-width="20%">部门级别</th>
         <th data-column-id="addTime" data-sortable="false" data-formatter="dateFormatter" data-width="20%">录入时间</th>
         <th data-column-id="__" data-sortable="false" data-formatter="ope" data-width="20%">操作</th>
     </tr>
@@ -60,9 +60,6 @@
 
     //$("[data-pkui-widget=\"bootgrid\"]").bootgrid();
 
-    function deptLevelFormatter (column, row) {
-        return row.deptLevel + ".";
-    }
     function ope(column, row) {
         return "<a href='#'>详情</a>";
     }
