【desktop】改用table组织表单数据

--- a/app/desktop/tpl/system/dept/edit.html
+++ b/app/desktop/tpl/system/dept/edit.html
@@ -1,1 +1,25 @@
-edit
+<form class="da-form">
+    <div class="da-form-heading">添加单位</div>
+    <div class="da-form-body">
+        <table class="da-form-table">
+            <tr>
+                <td><label class="da-form-label">单位级别：</label></td>
+                <td>
+                    <label><input type="radio">省级</label>
+                    <label><input type="radio">市级</label>
+                    <label><input type="radio">支队</label>
+                    <label><input type="radio">大队</label>
+                </td>
+                <td><label class="da-form-label">主管单位：</label></td>
+                <td>
+                    <label><input type="checkbox">是</label>
+                    <label><input type="checkbox">否</label>
+                    （注：是否为当前单位级别中行政级别最高的单位）
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="da-form-footer text-center">
+        <button type="button" class="btn btn-success-2">确定</button>
+    </div>
+</form>
