【desktop】去掉硬编码指定抽屉层的容器

--- a/app/desktop/tpl/desktop/appWindow.html
+++ b/app/desktop/tpl/desktop/appWindow.html
@@ -23,7 +23,7 @@
                 class="main-heading-text">单位管理</span>
             -->
         </div>
-        <div class="win-main-body pkui-drawer-parent">
+        <div class="win-main-body">
 
         </div>
 
