--- a/app/desktop/tpl/system/dept/edit.html
+++ b/app/desktop/tpl/system/dept/edit.html
@@ -12,7 +12,7 @@
                 <td class="text-right"><label class="da-control-label">单位级别：</label></td>
                 <td>
                     <div class="da-form-radio">
-                        <label><input type="radio">省级</label>
+                        <label><input type="radio" data-rule="checked">省级</label>
                         <label><input type="radio">市级</label>
                         <label><input type="radio">支队</label>
                         <label><input type="radio">大队</label>
