--- a/app/desktop/tpl/system/dept/edit.html
+++ b/app/desktop/tpl/system/dept/edit.html
@@ -1,4 +1,4 @@
-<form class="da-form" action="http://www.20ui.cn/admin/sysDeptSave"
+<form class="da-form" action="__CTX__/admin/sysDeptSave"
     data-pkui-component="validator|form"
     data-done-callback="addSysDeptDoneCallback"
     data-fail-callback="addSysDeptFailCallback"
