【desktop】更新数据表格

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -27,7 +27,8 @@
     <button type="button" class="btn btn-default-2"><i class="fa fa-search"></i> 高级查询</button>
 </div>
 
-<table id="sysDeptDatagrid" data-pkui-component="datagrid"
+<table id="sysDeptDatagrid"
+       data-pkui-component="datagrid"
        data-pkui-component-options='{
             "selection": true,
             "multiSelect": true
