--- a/app/desktop/tpl/system/dept/edit.html
+++ b/app/desktop/tpl/system/dept/edit.html
@@ -95,7 +95,7 @@
             layer.alert( '修改单位成功！', { icon: 1 }, function ( index ) {
                 layer.close( index );
                 // 关闭抽屉层
-                $form.closest( ".pkui-drawer-button" ).trigger( "click" );
+                $form.closest( ".pkui-drawer" ).find( ".pkui-drawer-button" ).trigger( "click" );
             } );
         }
         // 服务器端处理失败
