【desktop】修改 ctx 路径

--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -4,7 +4,7 @@
             id="addSysDeptBtn"
             data-pkui-component="drawer"
             data-pkui-component-options='{
-                "url":"./tpl/system/dept/add.html",
+                "url":"__CTX__/static/desktop/tpl/system/dept/add.html",
                 "container": ".da-win-main"}'
             ><i class="fa fa-plus"></i> 添加</button>
     <!--<button type="button" class="btn btn-info-2"><i class="fa fa-pencil"></i> 修改</button>-->
