【desktop】系统参数：完善

--- a/app/desktop/tpl/system/para/add.html
+++ b/app/desktop/tpl/system/para/add.html
@@ -15,7 +15,8 @@
 
             <tr>
                 <td class="text-right"><label class="da-control-label required">参数编码：</label></td>
-                <td><input type="text" class="da-form-control" name="paraCode" data-rule='“参数编码”: required'></td>
+                <td><input type="text" class="da-form-control" name="paraCode"
+                           data-rule='“参数编码”: required;remote(__CTX__/admin/checksysParaForm)'></td>
             </tr>
             <tr>
                 <td class="text-right"><label class="da-control-label required">参数名称：</label></td>
