--- a/app/desktop/tpl/system/para/detail.html
+++ b/app/desktop/tpl/system/para/detail.html
@@ -1,87 +1,38 @@
 <form class="da-form" >
 
-    <div class="da-form-heading">{{sysUser.loginName}}</div>
+    <div class="da-form-heading">{{paraCode}}</div>
     <div class="da-form-body">
         <table class="da-form-table da-table da-table-striped">
             <colgroup>
                 <col width="10%">
-                <col width="40%">
-                <col width="10%">
-                <col width="40%">
+                <col width="90%">
             </colgroup>
 
             <tr>
-                <td class="text-right"><label class="da-control-label required">登录名：</label></td>
-                <td>{{sysUser.loginName}}</td>
-
-                <td class="text-right"><label class="da-control-label required">警　　号：<!--全角空格--></label></td>
-                <td>{{sysUser.policeCode}}</td>
+                <td class="text-right"><label class="da-control-label">参数编码：</label></td>
+                <td>{{paraCode}}</td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">真实姓名：</label></td>
-                <td>{{sysUser.userName}}</td>
-
-                <td class="text-right"><label class="da-control-label required">用户状态：</label></td>
+                <td class="text-right"><label class="da-control-label">参数名称：</label></td>
+                <td>{{paraName}}</td>
+            </tr>
+            <tr>
+                <td class="text-right"><label class="da-control-label">参数　值：</label></td>
+                <td>{{paraValue}}</td>
+            </tr>
+            <tr>
+                <td class="text-right"><label class="da-control-label">可否编辑：</label></td>
                 <td>
-                    {{if sysUser.status === "1"}}
-                        <span class="text-success"><i class="fa fa-circle"></i> 正常</span>
-                    {{else if sysUser.status === "0"}}
-                        <span class="text-danger"><i class="fa fa-circle"></i> 停用</span>
+                    {{if visiable === "1"}}
+                    <span class="text-success"><i class="fa fa-circle"></i> 是</span>
+                    {{else if visiable === "0"}}
+                    <span class="text-danger"><i class="fa fa-circle"></i> 否</span>
                     {{/if}}
                 </td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">所属单位：</label></td>
-                <td>{{ sysUser.deptId | dicValue: "DIC_DEPT" }}</td>
-
-                <td class="text-right"><label class="da-control-label">身份证号：</label></td>
-                <td>{{sysUser.idcard}}</td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">用户类型：</label></td>
-                <td>{{ sysUser.userType | dicValue: "DIC_USER_TYPE" }}</td>
-
-                <td class="text-right"><label class="da-control-label">邮　　箱：<!--全角空格--></label></td>
-                <td>{{sysUser.email}}</td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">密　　码：<!--全角空格--></label></td>
-                <td>******</td>
-
-                <td class="text-right"><label class="da-control-label">联系电话：</label></td>
-                <td>{{sysUser.tel}}</td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">录入时间：</label></td>
-                <td>{{sysUser.addTime | dateFormat : "YYYY年MM月DD日 HH时mm分ss秒"}}</td>
-
-                <td class="text-right"><label class="da-control-label">备　　注：</label></td>
-                <td>{{sysUser.memo}}</td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">所属角色：</label></td>
-                <td colspan="3">
-                    <div class="da-form-checkbox">
-                        {{ each roleList as role roleIndex }}
-
-                        <label><input type="checkbox" name="roleId" value="{{ role.roleId }}"
-
-                                      {{ if roleIndex === 0 && checkedRoleIndex === 0 }}
-                                      data-rule="“所属角色”: checked"
-                                      {{ /if }}
-
-                            {{ each checkedRoleList as checkedRole checkedRoleIndex }}
-                            {{ if checkedRole.roleId === role.roleId }}
-                            checked
-                            {{ /if }}
-                            {{ /each }}
-
-
-                            >{{ role.roleName }}</label>
-
-                        {{ /each }}
-                    </div>
-                </td>
+                <td class="text-right"><label class="da-control-label">备　　注：<!--全角空格--></label></td>
+                <td>{{paraCode}}</td>
             </tr>
         </table>
     </div>
