--- a/app/desktop/tpl/system/para/edit.html
+++ b/app/desktop/tpl/system/para/edit.html
@@ -1,112 +1,47 @@
 <form class="da-form"
-    action="__CTX__/admin/sysUserSave" method="post"
-    data-pkui-component="validator|form"
-    data-done-callback="editSysUserDoneCallback"
-    data-fail-callback="editSysUserFailCallback"
-    data-always-callback="editSysUserAlwaysCallback" >
+      action="__CTX__/admin/sysParaSave" method="post"
+      data-pkui-component="validator|form"
+      data-done-callback="editSysParaDoneCallback"
+      data-fail-callback="editSysParaFailCallback"
+      data-always-callback="editSysParaAlwaysCallback" >
 
-    <!-- userId 标志修改 -->
-    <input type="hidden" name="userId" value="{{sysUser.userId}}">
+    <!-- paraCode 标志修改 -->
+    <input type="hidden" name="oldParaCode" value="{{paraCode}}">
 
-    <div class="da-form-heading">编辑用户</div>
+    <div class="da-form-heading">编辑系统参数</div>
     <div class="da-form-body">
         <table class="da-form-table da-table da-table-striped">
             <colgroup>
                 <col width="10%">
-                <col width="40%">
-                <col width="10%">
-                <col width="40%">
+                <col width="90%">
             </colgroup>
 
             <tr>
-                <td class="text-right"><label class="da-control-label required">登录名：</label></td>
-                <td><input type="text" class="da-form-control" name="loginName" value="{{sysUser.loginName}}" data-rule='“登录名”: required;username'></td>
-
-                <td class="text-right"><label class="da-control-label required">警　　号：<!--全角空格--></label></td>
-                <td><input type="text" class="da-form-control" name="policeCode" value="{{sysUser.policeCode}}" data-rule="“警号”: required"></td>
+                <td class="text-right"><label class="da-control-label required">参数编码：</label></td>
+                <td><input type="text" class="da-form-control" name="paraCode" value="{{paraCode}}"
+                           data-timely="8"
+                           data-rule='“参数编码”: required;remote(__CTX__/admin/checksysParaForm, oldParaCode)'></td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">真实姓名：</label></td>
-                <td><input type="text" class="da-form-control" name="userName" value="{{sysUser.userName}}" data-rule='“真实姓名”: required;chinese'></td>
-
-                <td class="text-right"><label class="da-control-label required">用户状态：</label></td>
+                <td class="text-right"><label class="da-control-label required">参数名称：</label></td>
+                <td><input type="text" class="da-form-control" name="paraName"  value="{{paraName}}" data-rule='“参数名称”: required'></td>
+            </tr>
+            <tr>
+                <td class="text-right"><label class="da-control-label required">参数　值：</label></td>
+                <td><input type="text" class="da-form-control" name="paraValue"  value="{{paraValue}}" data-rule='“参数值”: required'></td>
+            </tr>
+            <tr>
+                <td class="text-right"><label class="da-control-label required">可否编辑：</label></td>
                 <td>
                     <div class="da-form-radio">
-                        <label><input type="radio" name="status" value="1" {{if sysUser.status == "1"}}checked{{/if}}>正常</label>
-                        <label><input type="radio" name="status" value="0" {{if sysUser.status == "0"}}checked{{/if}}>停用</label>
+                        <label><input type="radio" name="visiable" value="1" {{if visiable === "1"}}checked{{/if}}>是</label>
+                        <label><input type="radio" name="visiable" value="0" {{if visiable === "0"}}checked{{/if}}>否</label>
                     </div>
                 </td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">所属单位：</label></td>
-                <td>
-                    <select name="deptId"
-                            data-pkui-component="chosen"
-                            data-pkui-component-options='{
-                                "dic":"__CTX__/admin/sysDeptDic?deptId={{_pku_user.deptId}}&releType=2",
-                                "defaultCode": "{{sysUser.deptId}}"
-                            }'
-                            data-rule="“所属单位”: required"
-                    ></select>
-                </td>
-
-                <td class="text-right"><label class="da-control-label">身份证号：</label></td>
-                <td><input type="text" class="da-form-control" name="idcard" value="{{sysUser.idcard}}" data-rule="“身份证号”: IDcard"></td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">用户类型：</label></td>
-                <td>
-                    <select name="userType"
-                            data-pkui-component="chosen"
-                            data-pkui-component-options='{
-                                "dic":"DIC_USER_TYPE",
-                                "defaultCode": "{{sysUser.userType}}"
-                            }'
-                            data-rule="“用户类型”: required"
-                    ></select>
-                </td>
-
-                <td class="text-right"><label class="da-control-label">邮　　箱：<!--全角空格--></label></td>
-                <td><input type="text" class="da-form-control" name="email" value="{{sysUser.email}}" data-rule="“邮箱”: email"></td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">密　　码：<!--全角空格--></label></td>
-                <td><span class="text-warning">请直接重置密码</span></td>
-
-                <td class="text-right"><label class="da-control-label">联系电话：</label></td>
-                <td><input type="text" class="da-form-control" name="tel" value="{{sysUser.tel}}" data-rule="“联系电话”: phone" data-rule-phone="[/[0-9_]{3,}/, '合法的电话号码']"></td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">确认密码：</label></td>
-                <td><span class="text-warning">请直接重置密码</span></td>
-
-                <td class="text-right"><label class="da-control-label">备　　注：</label></td>
-                <td><input type="text" class="da-form-control" name="memo" value="{{sysUser.memo}}"></td>
-            </tr>
-            <tr>
-                <td class="text-right"><label class="da-control-label required">所属角色：</label></td>
-                <td colspan="3">
-                    <div class="da-form-checkbox">
-                        {{ each roleList as role roleIndex }}
-
-                            <label><input type="checkbox" name="roleId" value="{{ role.roleId }}"
-
-                                {{ if roleIndex === 0 && checkedRoleIndex === 0 }}
-                                    data-rule="“所属角色”: checked"
-                                {{ /if }}
-
-                                {{ each checkedRoleList as checkedRole checkedRoleIndex }}
-                                    {{ if checkedRole.roleId === role.roleId }}
-                                        checked
-                                    {{ /if }}
-                                {{ /each }}
-
-
-                            >{{ role.roleName }}</label>
-
-                        {{ /each }}
-                    </div>
-                </td>
+                <td class="text-right"><label class="da-control-label">备　　注：<!--全角空格--></label></td>
+                <td><input type="text" class="da-form-control" name="paraDesc"  value="{{paraCode}}"></td>
             </tr>
         </table>
     </div>
@@ -117,14 +52,14 @@
 
 <script>
     // 请求发送成功，对服务器端返回的数据进行处理
-    function editSysUserDoneCallback($form, jsonResult) {
+    function editSysParaDoneCallback($form, jsonResult) {
         console.info( jsonResult );
         jsonResult = window.PKUI.handleJsonResult( jsonResult );
         console.info( jsonResult );
         // 服务器端处理成功
         if ( jsonResult.success ) {
             // 提示
-            layer.alert( '修改用户成功！', { icon: 1 }, function ( index ) {
+            layer.alert( '修改成功！', { icon: 1 }, function ( index ) {
                 layer.close( index );
                 // 关闭抽屉层
                 $form.closest( ".pkui-drawer" ).find( ".pkui-drawer-button" ).trigger( "click" );
@@ -133,18 +68,18 @@
         // 服务器端处理失败
         else {
             // 提示
-            layer.alert( '修改用户失败！', { icon: 2 } );
+            layer.alert( '修改失败！', { icon: 2 } );
         }
     }
 
     // 请求发送失败
-    function editSysUserFailCallback($form) {
+    function editSysParaFailCallback($form) {
         // 提示网络错误
         layer.alert( '网络错误！', { icon: 0 } );
     }
 
     // 无论请求发送成功与否
-    function editSysUserAlwaysCallback($form) {
+    function editSysParaAlwaysCallback($form) {
         // 无论
     }
 </script>
