--- a/app/desktop/tpl/system/para/list.html
+++ b/app/desktop/tpl/system/para/list.html
@@ -73,7 +73,7 @@
         +           ' data-pkui-component="drawer"'
         +           ' data-pkui-component-options=\'{'
         +               '"url":"__CTX__/static/desktop/tpl/system/para/detail.html",'
-        +               '"model":"__CTX__/admin/sysParaModel?paraId=' + row.paraId + '",'
+        +               '"model":"__CTX__/admin/sysParaModel?paraCode=' + row.paraCode + '",'
         +               '"container": ".da-win-main"}\'><i class="fa fa-file-o"></i> 查看</a>　'
 
         +       '<a href="javascript:void(0)" '
@@ -81,7 +81,7 @@
         +           ' data-pkui-component="drawer"'
         +           ' data-pkui-component-options=\'{'
         +               '"url":"__CTX__/static/desktop/tpl/system/para/edit.html",'
-        +               '"model":"__CTX__/admin/sysParaModel?paraId=' + row.paraId + '",'
+        +               '"model":"__CTX__/admin/sysParaModel?paraCode=' + row.paraCode + '",'
         +               '"container": ".da-win-main"}\'><i class="fa fa-edit"></i> 编辑</a>';
     }
 
