【desktop】系统参数模块：typo

--- a/app/desktop/tpl/system/para/edit.html
+++ b/app/desktop/tpl/system/para/edit.html
@@ -31,7 +31,7 @@
                 <td><input type="text" class="da-form-control" name="paraValue"  value="{{paraValue}}" data-rule='“参数值”: required'></td>
             </tr>
             <tr>
-                <td class="text-right"><label class="da-control-label required">可否编辑：</label></td>
+                <td class="text-right"><label class="da-control-label required">可否可编辑：</label></td>
                 <td>
                     <div class="da-form-radio">
                         <label><input type="radio" name="visiable" value="1" {{if visiable === "1"}}checked{{/if}}>是</label>
