【desktop】快捷方式：将单位管理单独抽取成快捷方式

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -117,6 +117,17 @@
                                 <img class="launchpad-shortcut-icon" src="./images/apps/gear.png" alt="">
                                 <p class="launchpad-shortcut-title">系统管理</p></div>
 
+                            <div class="launchpad-shortcut" data-pkui-app="true"
+                                 data-pkui-app-options='{
+                                     "icon": "./images/apps/start.png",
+                                     "title": "单位管理",
+                                     "src": "./tpl/system/index.html",
+                                     "menuId": "2",
+                                     "mode": "default"}'>
+                                <img class="launchpad-shortcut-icon" src="./images/apps/start.png" alt="">
+                                <p class="launchpad-shortcut-title">单位管理</p></div>
+
+
                             <!--
                             <div class="launchpad-shortcut" data-pkui-app="true"
                                  data-pkui-app-options='{
