【desktop】解决顶部条内容会被弹窗覆盖的问题。

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -17,10 +17,10 @@
 <body>
 
 <!-- desktop app -->
-<div class="da da-theme da-theme-default">
+<div class="da da-theme da-theme-default" id="da">
 
     <!-- 顶部栏 -->
-    <header class="da-topbar">
+    <header class="da-topbar" id="daTopbar">
 
         <!-- 显示桌面 -->
         <div class="topbar-home" title="隐藏所有窗口"></div>
@@ -73,7 +73,7 @@
     <!-- /顶部栏 -->
 
     <!-- 桌面 -->
-    <main class="da-desktop">
+    <main class="da-desktop" id="daDesktop">
         <!-- 应用启动面板 -->
         <div class="launchpad-container">
 
