【desktop】index.html：初步使用 loadContent模块 引入快捷方式

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -77,9 +77,10 @@
                         <div class="launchpad-shortcutpad"
                              data-pkui-component="loadContent"
                              data-pkui-component-options='{
-                                "position": "inner",
+                                "targetSelector": "default",
                                 "moduleId": "__CTX__/static/desktop/js/page/shortcutConfig"
                              }'>
+<!--
 
                             <div class="launchpad-shortcut" data-pkui-app="true"
                                  data-pkui-app-options='{
@@ -111,6 +112,7 @@
                                 <span class="launchpad-shortcut-icon launchpad-shortcut-fonticon"><i class="fa fa-users"></i></span>
                                 <p class="launchpad-shortcut-title">用户管理</p></div>
 
+-->
 
                             <!--
                             <div class="launchpad-shortcut" data-pkui-app="true"
