【desktop】appWindow.html、app-window.js：处理 menuId为数字（或字符串）的情况

--- a/app/desktop/tpl/desktop/appWindow.html
+++ b/app/desktop/tpl/desktop/appWindow.html
@@ -14,7 +14,7 @@
              data-pkui-component-options='{
                 "url": "{{menuUrl}}",
                 "dnd": false,
-                "menuId": "{{menuId}}"
+                "menuId": {{menuId}}
              }'></div>
     </aside>
     <!-- /侧边栏 -->
