--- a/app/desktop/tpl/system/dept/list.html
+++ b/app/desktop/tpl/system/dept/list.html
@@ -24,14 +24,14 @@
     </div>
     <div class="main-topbar-query">
         <form id="sysDeptQueryForm">
-            <div class="input-group pull-left" style="width: 280px;">
+            <div class="input-group">
                 <span class="input-group-addon">单位名称</span>
                 <input type="text" class="da-form-control" placeholder="模糊查询" name="deptName" data-operator="like">
                 <span class="input-group-btn">
                     <button class="btn btn-info-2" type="button" onclick='jQuery( "#sysDeptDatagrid" ).bootgrid( "reload" );'><i class="fa fa-search"></i></button>
                 </span>
             </div>
-            <button class="btn btn-default-2" style="margin-left: 6px;" type="button"
+            <button class="btn btn-default-2" type="button"
                     onclick='jQuery( "#sysDeptDatagrid" ).bootgrid( "reload" );'><i class="fa fa-refresh"></i></button>
         </form>
     </div>
