--- a/app/desktop/tpl/system/dic/list/list.html
+++ b/app/desktop/tpl/system/dic/list/list.html
@@ -46,7 +46,7 @@
     </div>
     <div class="main-topbar-query">
         <form id="sysDicListQueryForm">
-            <div class="input-group pull-left" style="width: 280px;">
+            <div class="input-group" >
                 <span class="input-group-addon">字典描述</span>
                 <input type="text" class="da-form-control" placeholder="模糊查询" name="dicDesc" data-operator="like">
                 <span class="input-group-btn">
@@ -55,7 +55,7 @@
                             class="fa fa-search"></i></button>
                 </span>
             </div>
-            <button class="btn btn-default-2" style="margin-left: 6px;" type="button"
+            <button class="btn btn-default-2" type="button"
                     onclick='jQuery( "#sysDicListDatagrid" ).bootgrid( "reload" );'><i class="fa fa-refresh"></i></button>
         </form>
     </div>
