【desktop】角色管理：添加 info

--- a/app/desktop/tpl/system/role/index.html
+++ b/app/desktop/tpl/system/role/index.html
@@ -31,7 +31,6 @@
     </div>
 
     <div class="sysrole-content" id="sysroleContent">
-
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist" id="sysRoleTablist">
             <li class="active"><a href="#sysroleRelUser" role="tab"><i class="fa fa-users"></i> 关联用户</a></li>
@@ -41,6 +40,9 @@
             <li><a href="#sysroleRelNewPermit" role="tab" ><i class="fa fa-wrench"></i> 数据权限（新）</a></li>
         </ul>
         <!-- /Nav tabs -->
+        <div id="sysrole-info" class="sysrole-info warning">
+            <i class="fa fa-hand-o-left"></i> 请在角色树上选择角色后，再进行相关操作。
+        </div>
 
         <!-- Tab panes -->
         <div class="tab-content">
