【desktop】角色管理：修改角色时，不能再修改角色所属系统

--- a/app/desktop/tpl/system/role/edit.html
+++ b/app/desktop/tpl/system/role/edit.html
@@ -29,6 +29,7 @@
                                 }
                             }'
                             data-rule="“所属系统”: required"
+                            {{if roleId && sysId}} disabled {{/if}}
                     ></select>
                 </td>
             </tr>
