【desktop】角色管理：允许修改角色所属的子系统。

--- a/app/desktop/tpl/system/role/edit.html
+++ b/app/desktop/tpl/system/role/edit.html
@@ -31,8 +31,8 @@
                                 "relateInputName": "sysName"
                             }'
                             data-rule="“所属系统”: required"
-                            {{if roleId && sysId}} disabled {{/if}}
                     ></select>
+                        <!--{{if roleId && sysId}} disabled {{/if}}-->
                 </td>
             </tr>
             <tr>
