【desktop】完成退出系统功能。

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -57,7 +57,7 @@
                     <li class="dropdown-header"><i class="fa fa-user-o"></i> 管理员</li>
                     <li class="divider"></li>
                     <li class="relative"><a href="javascript:void(0);"><i class="fa fa-envelope-o"></i><span class="toolbar-msgItem-label">24</span> 我的消息</a></li>
-                    <li><a href="javascript:void(0);"><i class="fa fa-sign-out"></i> 退出系统</a></li>
+                    <li><a href="javascript:void(0);" onclick="existSystemAndGoToLogin()/* 此函数可以被覆写 */;"><i class="fa fa-sign-out"></i> 退出系统</a></li>
                 </ul>
             </div>
             <!-- /用户信息 -->
