【desktop】应用文本发放大镜插件

--- a/app/desktop/tpl/system/user/add.html
+++ b/app/desktop/tpl/system/user/add.html
@@ -47,7 +47,9 @@
                 </td>
 
                 <td class="text-right"><label class="da-control-label">身份证号：</label></td>
-                <td><input type="text" class="da-form-control" name="idcard" data-rule="“身份证号”: IDcard"></td>
+                <td><input type="text" class="da-form-control" name="idcard"
+                           data-rule="“身份证号”: IDcard"
+                           data-pkui-component="textMagnifier"></td>
             </tr>
             <tr>
                 <td class="text-right"><label class="da-control-label required">用户类型：</label></td>
