【desktop】我的消息：完成UI部分

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -46,15 +46,32 @@
                                 <div class="pkui-message-menu-content">
                                     <div class="pkui-message-menu-list">
                                         <div class="pkui-message-menu-item">
-                                            <span class="pkui-message-menu-item-icon"></span>
-                                            <span class="pkui-message-menu-item-text"></span>
-                                            <span class="pkui-message-menu-item-date"></span>
+                                            <span class="pkui-message-menu-item-icon"><i class="fa fa-envelope-o"></i></span>
+                                            <span class="pkui-message-menu-item-text">市内迁移通知</span>
+                                            <span class="pkui-message-menu-item-date">2017-02-16 09:34:12</span>
+                                        </div>
+                                        <div class="pkui-message-menu-item">
+                                            <span class="pkui-message-menu-item-icon"><i class="fa fa-envelope-o"></i></span>
+                                            <span class="pkui-message-menu-item-text">二代证退回通知</span>
+                                            <span class="pkui-message-menu-item-date">2016-12-30 11:25:02</span>
+                                        </div>
+                                        <div class="pkui-message-menu-item">
+                                            <span class="pkui-message-menu-item-icon"><i class="fa fa-envelope-o"></i></span>
+                                            <span class="pkui-message-menu-item-text">市内迁移撤销办理通知</span>
+                                            <span class="pkui-message-menu-item-date">2016-12-30 11:25:02</span>
+                                        </div>
+                                        <div class="pkui-message-menu-item">
+                                            <span class="pkui-message-menu-item-icon"><i class="fa fa-envelope-o"></i></span>
+                                            <span class="pkui-message-menu-item-text">二代证退回通知二代证退回通知二代证退回通知二代证退回通知</span>
+                                            <span class="pkui-message-menu-item-date">2016-12-30 11:25:02</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="pkui-message-panel-footer"></div>
+                        <div class="pkui-message-panel-footer">
+                            <a href="#" class="link-more-message"><i class="fa fa-plus"></i> 更多</a>
+                        </div>
                     </div>
                 </div>
             </div>
